--- a/EssentialDevelopper/.travis.yml
+++ b/EssentialDevelopper/.travis.yml
@@ -1,4 +1,5 @@
 os: osx
 osx_image: xcode10.1
 language: swift
+before_install: gem install bundler
 script: xcodebuild clean build test -project EssentialDevelopper.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGN_REQUIRED=NO
