add swift version to correct '.yml' file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 os: osx
 osx_image: xcode10.1
 language: swift
+env: SWIFT_SNAPSHOT=4.1.2
 before_install: gem install bundler
 script: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGN_REQUIRED=NO
