--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -13,5 +13,5 @@ jobs:
 
     steps:
       - name: Test 1
-        run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
+        run: xcodebuild clean build test -project ../../EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
           
