--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -10,13 +10,12 @@ on:
 jobs:
   build-and-test:
     runs-on: macos-latest
-
+       
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_13.3.app
-
-    - name: Build and test
-      run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
+      - uses: swift-actions/setup-swift@v1
+        with:
+              swift-version: "5.6.1"
+              xcode-version: latest-stable
+      - name: Build and test
+        run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
           
