--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -12,10 +12,11 @@ jobs:
     runs-on: macos-latest
        
     steps:
+      - uses: actions/checkout@v2
       - uses: swift-actions/setup-swift@v1
         with:
               swift-version: "5.6.1"
               xcode-version: latest-stable
       - name: Build and test
-        run: xcodebuild clean build test -project EssentialDevelopper.xcodeproj -scheme 'CI' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
+        run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
           
