--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build-and-test-macos:
+  build-and-test:
     runs-on: macos-latest
        
     steps:
@@ -17,18 +17,9 @@ jobs:
         with:
               swift-version: "5.6.1"
               xcode-version: latest-stable
-      - name: Build and test
+      - name: Build and test macOS
         run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI_macOS' -sdk macosx -destination "platform=macOS" ONLY_ACTIVE_ARCH=YES CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
         
-build-and-test-ios:
-    runs-on: ios-latest
-       
-    steps:
-      - uses: actions/checkout@v2
-      - uses: swift-actions/setup-swift@v1
-        with:
-              swift-version: "5.6.1"
-              xcode-version: latest-stable
-      - name: Build and test
+      - name: Build and test iOS
         run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI_iOS' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.4,name=iPhone 13" ONLY_ACTIVE_ARCH=YES
           
