--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,5 +21,5 @@ jobs:
         run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI_macOS' -sdk macosx -destination "platform=macOS" ONLY_ACTIVE_ARCH=YES CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
         
       - name: Build and test iOS
-        run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI_iOS' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.4,name=iPhone 13" ONLY_ACTIVE_ARCH=YES
+        run: xcodebuild clean build test -project EssentialDevelopper/EssentialDevelopper.xcodeproj -scheme 'CI_iOS' -list CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.4,name=iPhone 13" ONLY_ACTIVE_ARCH=YES
           
