--- a/EssentialDevelopper/EssentialDevelopper.xcodeproj/xcshareddata/xcschemes/CI_iOS.xcscheme
+++ b/EssentialDevelopper/EssentialDevelopper.xcodeproj/xcshareddata/xcschemes/CI_iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "F4BA2BE62269E66F0015EABC"
-               BuildableName = "EssentialFeed_macOS.framework"
+               BuildableName = "EssentialFeed.framework"
                BlueprintName = "EssentialFeed"
                ReferencedContainer = "container:EssentialDevelopper.xcodeproj">
             </BuildableReference>
@@ -48,7 +48,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F4BA2BE62269E66F0015EABC"
-            BuildableName = "EssentialFeed_macOS.framework"
+            BuildableName = "EssentialFeed.framework"
             BlueprintName = "EssentialFeed"
             ReferencedContainer = "container:EssentialDevelopper.xcodeproj">
          </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F4BA2BE62269E66F0015EABC"
-            BuildableName = "EssentialFeed_macOS.framework"
+            BuildableName = "EssentialFeed.framework"
             BlueprintName = "EssentialFeed"
             ReferencedContainer = "container:EssentialDevelopper.xcodeproj">
          </BuildableReference>
@@ -117,7 +117,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F4BA2BE62269E66F0015EABC"
-            BuildableName = "EssentialFeed_macOS.framework"
+            BuildableName = "EssentialFeed.framework"
             BlueprintName = "EssentialFeed"
             ReferencedContainer = "container:EssentialDevelopper.xcodeproj">
          </BuildableReference>
@@ -133,7 +133,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "F4BA2BE62269E66F0015EABC"
-            BuildableName = "EssentialFeed_macOS.framework"
+            BuildableName = "EssentialFeed.framework"
             BlueprintName = "EssentialFeed"
             ReferencedContainer = "container:EssentialDevelopper.xcodeproj">
          </BuildableReference>
