--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -21,4 +21,4 @@ jobs:
         run: xcodebuild clean build test -project EssentialFeedStudy/EssentialDevelopper.xcodeproj -scheme 'CI_macOS' -sdk macosx -destination "platform=macOS" ONLY_ACTIVE_ARCH=YES CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO
         
       - name: Build and test iOS
-        run: xcodebuild clean build test -project EssentialFeedStudy/EssentialDevelopper.xcodeproj -scheme 'CI_iOS' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 13 Pro" ONLY_ACTIVE_ARCH=YES
+        run: xcodebuild clean build test -workspace EssentialAppWorkspace.xcworkspace -scheme 'CI_iOS' CODE_SIGN_IDENTITY='' CODE_SIGN_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,OS=15.2,name=iPhone 13 Pro" ONLY_ACTIVE_ARCH=YES
