Add UITests and ensure app renders 22 cells with identifier, configure CI_iOS to run UITests

--- a/EssentialFeedStudy/EssentialDevelopper.xcodeproj/xcshareddata/xcschemes/CI_iOS.xcscheme
+++ b/EssentialFeedStudy/EssentialDevelopper.xcodeproj/xcshareddata/xcschemes/CI_iOS.xcscheme
@@ -34,6 +34,20 @@
                ReferencedContainer = "container:EssentialDevelopper.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "93FD95962867353E008DB2DF"
+               BuildableName = "EssentialAppAcceptanceTests.xctest"
+               BlueprintName = "EssentialAppAcceptanceTests"
+               ReferencedContainer = "container:../EssentialApp/EssentialApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
